--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,6 @@ jobs:
       matrix:
         jdk: [11, 14, 16, 17]
       fail-fast: false
-      max-parallel: 2
 
     steps:
       - uses: actions/checkout@v2
@@ -42,6 +41,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: zulu
           cache: maven
       - name: Build with Maven
         run: mvn -B -Dmaven.test.skip package
