--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>at.ac.tuwien.treequery</groupId>
     <artifactId>treequery</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>TreeQuery</name>
 
     <properties>
